--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Multi-User Video Call</title>
+        <title>Video Call</title>
 
         <meta content="width=device-width, initial-scale=1" name="viewport" />
 
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-12 h2 mt-5 text-center">Create Chat</div>
             </div>
-                
+
             <div class="row mt-2">
                 <div class="col-12 text-center">
                     <span class="form-text small text-danger" id='err-msg'></span>
