card is added in front page

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
     <body>
         <nav class="navbar fixed-top bg-info rounded-0 d-print-none">
-            <div class="text-white">Video Call</div>
+            <div class="text-white " style ="text-align:center">Welcome Into Video Chat Application</div>
 
             <div class="pull-right room-comm" hidden>
                 <button class="btn btn-sm rounded-0 btn-no-effect" id='toggle-video' onclick="test()">
@@ -39,10 +39,10 @@
                 </button>
             </div>
         </nav>
-
-        <div class="container-fluid" id='room-create' hidden>
+       <br/><br/>
+        <div class="container-fluid card" id='room-create' hidden>
             <div class="row">
-                <div class="col-12 h2 mt-5 text-center">Create Chat</div>
+                <div class="col-12 h2 mt-5 text-center">Connect Into Chat Application</div>
             </div>
 
             <div class="row mt-2">
@@ -94,7 +94,7 @@
 
         
         <div class="container-fluid room-comm" hidden>
-            <div class="row">
+            <div class="row ">
                 <video class="local-video" id='local' volume='0' autoplay muted></video>
             </div>
             
